--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,67 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
+import styles from '../styles/main.module.scss'
+import text from '../styles/core/text.module.scss'
+import layout from '../styles/core/layout.module.scss'
+
+import Form from '../components/Form.astro';
+
 ---
 
 <Layout title="Welcome to Astro.">
+	<header class={styles.header}>
+		<div class={layout.maxPage}>
+			<p class={text.med}>Think Piano</p>
+		</div>
+	</header>
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
-</Layout>
+		<!-- HERO -->
+		<div class={styles.hero} style="background-image: url('/images/closeup.jpg')">
+			<div class={layout.maxPage}>
+				<div class={styles.heromsg}>
+					<h1 class={text.heroTitle}>Think Piano</h1>
+					<h3 class={text.heroSubTitle}>Unleash Your Inner Musician with Expert Piano Lessons</h3>
+				</div>
+			</div>
+		</div>
 
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
+		<!-- ABOUT -->
+		<div class={layout.RowCenter}>
+			<div class={layout.maxPage}>
+				<div class={styles.about}>
+					<div class={styles.aboutleft}>
+						<h3 class={text.studyTitle}>Why Study With Us?</h3>
+						<p class={text.small}>
+							<br/>
+							Studying at our music studio is the perfect way to enhance your musical
+							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.
+							<br/><br/>Our music studio is committed to fostering a community of musicians and music lovers. You will have opportunities to collaborate with fellow students, participate in ensemble performances, and attend workshops and events. This collaborative environment will allow you to develop your musical skills and network with like-minded individuals
+							<br/><br/>In summary, studying at our music studio offers a unique combination of personalized instruction, state-of-the-art facilities, and a supportive and inspiring community. Don't miss this opportunity to take your music to the next level!
+						</p>
+					</div>
+					<div class={styles.aboutright}>
+						<img class={styles.me} src="images/me.jfif" />
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- CONTACT -->
+		<div class={styles.contact}>
+			<div class={layout.maxPage}>
+				<Form />
+			</div>
+		</div>
+
+		<!-- Reviews -->
+		<div class={styles.reviews}>
+		
+		</div>
+
+	</main>
+
+	<footer class={styles.footer}>
+		Seth Climenhaga
+	</footer>
+</Layout>
