--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,8 @@ import Form from '../components/Form.astro';
 	</header>
 	<main>
 		<!-- HERO -->
-		<div class={styles.hero} style="background-image: url('/images/closeup.jpg')">
+		<div class={styles.hero} style="background-image: url('images/closeup.jpg')">
+			<!-- <img  src="images/closeup.jpg" /> -->
 			<div class={layout.maxPage}>
 				<div class={styles.heromsg}>
 					<h1 class={text.heroTitle}>Think Piano</h1>
