--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,11 +31,14 @@ const { title } = Astro.props;
 		margin: 0;
 		padding: 0;
 		box-sizing: border-box;
+		width: 100%;
 	
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		/* background-color: #ee5252; */
+
+		width: 100%;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -46,8 +49,11 @@ const { title } = Astro.props;
 		padding: 0;
 		display: flex;
 		flex-direction: column;
+		width: 100%;
+		/* background-color: #da62c4; */
 
-		overflow: scroll;
+		overflow-y: scroll;
+		overflow-x: hidden;
 		-ms-overflow-style: none; /* IE, Edge */
 		scrollbar-width: none;    /* Firefox */
 
