--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import styles from '../styles/main.module.scss'
 import text from '../styles/core/text.module.scss'
 import layout from '../styles/core/layout.module.scss'
 
-import Form from '../components/Form.astro';
+import Form from '../components/form/Form.astro';
 
 ---
 
@@ -36,10 +36,7 @@ import Form from '../components/Form.astro';
 						<p class={text.small}>
 							<br/>
 							Studying at our music studio is the perfect way to enhance your musical
-							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.
-							<br/><br/>Our music studio is committed to fostering a community of musicians and music lovers. You will have opportunities to collaborate with fellow students, participate in ensemble performances, and attend workshops and events. This collaborative environment will allow you to develop your musical skills and network with like-minded individuals
-							<br/><br/>In summary, studying at our music studio offers a unique combination of personalized instruction, state-of-the-art facilities, and a supportive and inspiring community. Don't miss this opportunity to take your music to the next level!
-						</p>
+							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.						</p>
 					</div>
 					<div class={styles.aboutright}>
 						<img class={styles.me} src="images/me.jfif" />
@@ -56,9 +53,9 @@ import Form from '../components/Form.astro';
 		</div>
 
 		<!-- Reviews -->
-		<div class={styles.reviews}>
+		<!-- <div class={styles.reviews}>
 		
-		</div>
+		</div> -->
 
 	</main>
 
