--- a/src/styles/core/global.module.scss
+++ b/src/styles/core/global.module.scss
@@ -1,8 +1,16 @@
 @import './brand.module.scss';
 
+*{
+    margin: 0;
+    padding: 0;
+    width: 100%;  
+    overflow: hidden;
+}
+
 body{
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .dark{
