--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -54,11 +54,18 @@
 }
 
 .me{
-    height: 30em;
+    height: 10em;
+    width: auto;
     border-radius: 50%;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-}
 
+    @include sm{
+        height: 5em;
+    }
+    @include md{
+        height: 20em;
+    }
+}
 
 .contact{
     height: 50vh;
@@ -68,16 +75,9 @@
     padding-top:5em;
 }
 
-
 .reviews{
     height: 10vh;
 }
-
-
-
-
-
-
 
 .footer{
     background-color: $dark;
