slight style tweaks

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const { title } = Astro.props;
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		/* background-color: #da62c4; */
+		background-color: #F2F2F2;
 
 		overflow-y: scroll;
 		overflow-x: hidden;
