--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Form from '../components/form/Form.astro';
 
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Think Piano">
 	<header class={styles.header}>
 		<div class={layout.maxPage}>
 			<p class={text.med}>Think Piano</p>
