improved form responsivness

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Form from '../components/form/Form.astro';
 				<div class={styles.about}>
 					<div class={styles.aboutleft}>
 						<h3 class={text.studyTitle}>Why Study With Us?</h3>
-						<p class={text.small}>
+						<p class={styles.why}>
 							<br/>
 							Studying at our music studio is the perfect way to enhance your musical
 							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.						</p>
