--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -9,41 +9,32 @@ button, input , textarea{
     letter-spacing: 1.4px;
 }
 
+textarea{
+    resize: none;
+}
+
 .container{
     @include Flex(column);
     @include md {
         @include Flex(row)
     }
-}
-
-.screen:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 20px;
-    right: 20px;
-    bottom: 0;
-    border-radius: 15px;    
-    box-shadow: 0 20px 40px rgba(0, 0, 0, .4);
-    z-index: -1;
+    overflow: hidden;
+    height: 100%;
 }
 
 .appTitle {
     display: flex;
     flex-direction: column;
-    position: relative;
     color: #F20F38;
-    font-size: 50px;
-    overflow: visible;
+    @include medFont(1);
+    @include md {
+        @include largeFont(1);
+
+    }
 }
 
 .appTitle:after {
     content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -10px;
     width: 25px;
     height: 4px;
     background: #F20F38;
@@ -68,7 +59,6 @@ button, input , textarea{
     height: 15vh;
     text-transform: uppercase;
 }
-
 
 .appFormControl {
     width: 100%;
@@ -105,37 +95,4 @@ button, input , textarea{
 
 .appFormButton:hover {
     color: #b9134f;
-}
-
-
-@media screen and (max-width: 520px) {
-    .screenBody {
-        flex-direction: column;
-    }
-
-    .screenBodyItem.left {
-        margin-bottom: 30px;
-    }
-
-    .appTitle {
-        flex-direction: row;
-    }
-
-    .appTitle span {
-        margin-right: 12px;
-    }
-
-    .appTitle:after {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .screenBody {
-        padding: 40px;
-    }
-
-    .screenBodyItem {
-        padding: 0;
-    }
 }
