--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/think-piano/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -37,7 +37,7 @@ const { title } = Astro.props;
 	html {
 		font-family: system-ui, sans-serif;
 		/* background-color: #ee5252; */
-
+		color-scheme: dark;
 		width: 100%;
 	}
 	code {
