--- a/src/components/form/Form.astro
+++ b/src/components/form/Form.astro
@@ -10,8 +10,8 @@ import form from './form.module.scss'
       </div>
       <div class={form.appContact}>CONTACT INFO : +1 705-571-1633</div>
     </div>
-    <div class={form.right}>
-      <div class={form.appForm}>
+    <div class={form.right} >
+      <form class={form.appForm} target="_blank" action="https://formsubmit.co/sethclim@gmail.com" method="POST">
         <div class={form.appFormGroup}>
           <input class={form.appFormControl} placeholder="NAME" >
         </div>
@@ -22,9 +22,9 @@ import form from './form.module.scss'
           <textarea class={form.appFormControl} placeholder="MESSAGE"></textarea>
         </div>
         <div class={form.appFormGroup}>
-          <button class={form.appFormButton}>SEND</button>
+          <button type="submit" value="Submit" class={form.appFormButton}>SEND</button>
         </div>
-      </div>
+      </form>
     </div>
 </div>
 
