--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Form from '../components/form/Form.astro';
 <Layout title="Think Piano">
 	<header class={styles.header}>
 		<div class={layout.maxPage}>
-			<p class={text.med}>Think Piano</p>
+			<p class={text.med}>Think Music Academy</p>
 		</div>
 	</header>
 	<main>
@@ -21,7 +21,7 @@ import Form from '../components/form/Form.astro';
 			<!-- <img  src="images/closeup.jpg" /> -->
 			<div class={layout.maxPage}>
 				<div class={styles.heromsg}>
-					<h1 class={text.heroTitle}>Think Piano</h1>
+					<h1 class={text.heroTitle}>Think Music Academy</h1>
 					<h3 class={text.heroSubTitle}>Unleash Your Inner Musician with Expert Piano Lessons</h3>
 				</div>
 			</div>
