--- a/src/styles/core/text.module.scss
+++ b/src/styles/core/text.module.scss
@@ -86,14 +86,23 @@
 
 .heroTitle{
     color: #F20F38;
-    @include largeFont(2em);
+    @include largeFont(1.3em);
     margin: 0.1em 0;
+
+    font-family: "Days One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .heroSubTitle{
     color: $offWhite;
-    @include medFont(0.2);
+    @include medFont(0);
     font-weight: 100;
+
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
 }
 
 .headerLink{
