--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -9,6 +9,12 @@
     height: 8vh;
     
     @include Flex(row);
+
+    font-family: "Days One", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+
+    @include smallFont()
 }
 
 .hero{
@@ -20,6 +26,8 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    background-color: rgba(138, 138, 138, 0.5);
+    background-blend-mode: multiply;
 }
 
 .about{
