updated pricing and headshot

--- a/src/components/pricing/pricing.astro
+++ b/src/components/pricing/pricing.astro
@@ -8,7 +8,7 @@ import styles from './style.module.scss'
         <h2>Intro</h2>
         <p><span>$60</span> / Lesson</p>
         <ul>
-          <li>Pay per Lesson</li>
+          <li>Pay Per Lesson</li>
           <li>Cancel Anytime</li>
           
         </ul>
@@ -20,7 +20,7 @@ import styles from './style.module.scss'
         <ul>
           <li>12 Lesson Bundle</li>
           <li>2 Free Makeup Lessons</li>
-          <li>$600 total</li>
+          <li>$600 Total</li>
         </ul>
 
       </div>      
@@ -28,9 +28,9 @@ import styles from './style.module.scss'
         <h2>Superstar</h2>
         <p><span>$40</span> / Lesson</p>
         <ul>
-          <li>36 Lesson Bundle (year)</li>
+          <li>36 Lesson Bundle (Year)</li>
           <li>4 Free Makeup Lessons</li>
-          <li>$1440 total</li>
+          <li>$1440 Total</li>
         </ul>
       </div>
     </div>
