--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,10 +37,10 @@ import Pricing from '../components/pricing/pricing.astro';
 						<p class={styles.why}>
 							<br/>
 							Studying at our music studio is the perfect way to enhance your musical
-							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.						</p>
+							skills and reach new levels of excellence. Our experienced instructors will provide personalized attention and guidance to help you achieve your goals. Whether you are a beginner looking to learn the basics or a seasoned musician seeking to perfect your craft, we have the resources and expertise to support you.</p>
 					</div>
 					<div class={styles.aboutright}>
-						<img class={styles.me} src="images/me.jfif" />
+						<img class={styles.me} src="images/seth_headshot.webp" />
 					</div>
 				</div>
 			</div>
@@ -81,6 +81,6 @@ import Pricing from '../components/pricing/pricing.astro';
 	</main>
 
 	<footer class={styles.footer}>
-		Seth Climenhaga
+		Copyright @2024 Think Music Academy
 	</footer>
 </Layout>
