webp background header image

--- a/src/components/form/Form.astro
+++ b/src/components/form/Form.astro
@@ -8,7 +8,7 @@ import form from './form.module.scss'
         <span>CONTACT</span>
         <span>US</span>
       </div>
-      <div class={form.appContact}>CONTACT INFO : +1 705-571-1633</div>
+      <div class={form.appContact}>CONTACT: +1 705-571-1633</div>
     </div>
     <div class={form.right} >
       <form class={form.appForm} target="_blank" action="https://formsubmit.co/sethclim@gmail.com" method="POST">
