--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Pricing from '../components/pricing/pricing.astro';
 	</header>
 	<main>
 		<!-- HERO -->
-		<div class={styles.hero} style="background-image: url('images/closeup.jpg')">
+		<div class={styles.hero} style="background-image: url('images/closeup.webp')">
 			<!-- <img  src="images/closeup.jpg" /> -->
 			<div class={layout.maxPage}>
 				<div class={styles.heromsg}>
