--- a/src/components/pricing/pricing.astro
+++ b/src/components/pricing/pricing.astro
@@ -1,38 +1,40 @@
 ---
 import styles from './style.module.scss'
 ---
-<div>
+<divr>
+    
   <div class={styles.container}>
+
     <div class={styles.pricing}>
       <div class={styles.pricingPlan}>
-        <h2>Intro</h2>
-        <p><span>$60</span> / Lesson</p>
+        <h2>Per Lesson</h2>
+        <p><span>$30</span> / Lesson</p>
         <ul>
           <li>Pay Per Lesson</li>
           <li>Cancel Anytime</li>
-          
         </ul>
-        <p>*30 min lessons available</p>
       </div>
       <div class={styles.pricingPlan}>
-        <h2>Hobby</h2>
-        <p><span>$50</span> / Lesson</p>
-        <ul>
+        <h2>12 Week Package</h2>
+        <p><span>$25</span> / Lesson</p>
+        <ul>  
           <li>12 Lesson Bundle</li>
           <li>2 Free Makeup Lessons</li>
-          <li>$600 Total</li>
+          <li>$300 Total</li>
         </ul>
 
       </div>      
       <div class={styles.pricingPlan}>
-        <h2>Superstar</h2>
-        <p><span>$40</span> / Lesson</p>
+        <h2>Full Year</h2>
+        <p><span>$20</span> / Lesson</p>
         <ul>
           <li>36 Lesson Bundle (Year)</li>
           <li>4 Free Makeup Lessons</li>
-          <li>$1440 Total</li>
+          <li>$720 Total</li>
         </ul>
       </div>
     </div>
+    
   </div>
+  <p>*30 min lessons available</p>
 </div>
