--- a/src/components/pricing/style.module.scss
+++ b/src/components/pricing/style.module.scss
@@ -6,72 +6,87 @@
 
 .container{
     @include Flex(column);
-    @include md {
-        @include Flex(row)
-    }
     overflow: hidden;
-    height: 100%;
+    min-width: 0px;
+    // max-width: 0vw;
+    padding: 0; 
+    margin: 0;
+    max-width: 100%;
 }
 
 .pricing {
-    display: flex;
-    justify-content: space-between;
-    max-width: 960px;
-    margin: auto;
+  @include sm {
+    @include Flex(column);
   }
-  .pricingPlan {
-    flex: 1;
-    background-color: $dark;
-    margin: 15px 8px;
-    padding: 30px;
-    border-radius: 6px;
-    color: #fff;
-  }
+  @include md {
+    @include Flex(row);
 
-  .pricingPlan h2 {
-    margin-top: 0;
-    padding-bottom: 10px;
-    border-bottom: 2px solid #F20F38;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
+    justify-content: space-between;
   }
-  .pricingPlan p {
-    margin-top: 0;
+  margin: 0;
+  // background-color: pink;
+  width: 70%;
+}
+.pricingPlan {
+  flex: 1;
+  background-color: $dark;
+  margin: 15px 8px;
+  padding: 30px;
+  border-radius: 6px;
+  color: #fff;
+  height: 20em;
+}
+
+.pricingPlan h2 {
+  text-align: center;
+  @include md {
+    text-align: left;
   }
-  .pricingPlan p span {
-    font-size: 33px;
-  }
-  .pricingPlan ul {
-    margin: 0 0 35px;
-    padding-left: 16px;
-    list-style: none;
-    line-height: 1.8;
-    color: #b5b5b5;
-  }
-  .pricingPlan ul li::before {
-    content: "•";
-    color: #F20F38;
-    display: inline-block;
-    width: 20px;
-    margin-left: -15px;
-    position: relative;
-    top: 4px;
-    font-size: 26px;
-    line-height: 0;
-  }
-  .pricingPlan a {
-    text-decoration: none;
-    color: #fff;
-    padding: 10px 20px;
-    text-align: center;
-    background: #F20F38;
-    border: 2px solid #F20F38;
-    border-radius: 5px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: bold;
-  }
-  .pricingPlan a:hover {
-    background-color: $dark;
-  }
+  margin-top: 0;
+  padding-bottom: 10px;
+  border-bottom: 2px solid #F20F38;
+  text-transform: uppercase;
+  letter-spacing: 0.07em;
+  
+}
+.pricingPlan p {
+  margin-top: 0;
+}
+.pricingPlan p span {
+  font-size: 33px;
+}
+.pricingPlan ul {
+  margin: 0 0 35px;
+  padding-left: 16px;
+  list-style: none;
+  line-height: 1.8;
+  color: #b5b5b5;
+}
+.pricingPlan ul li::before {
+  content: "•";
+  color: #F20F38;
+  display: inline-block;
+  width: 20px;
+  margin-left: -15px;
+  position: relative;
+  top: 4px;
+  font-size: 26px;
+  line-height: 0;
+}
+.pricingPlan a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 20px;
+  text-align: center;
+  background: #F20F38;
+  border: 2px solid #F20F38;
+  border-radius: 5px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bold;
+  
+}
+.pricingPlan a:hover {
+  background-color: $dark;
+}
