update pricing and site name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Pricing from '../components/pricing/pricing.astro';
 <Layout title="Think Piano">
 	<header class={styles.header}>
 		<div class={layout.maxPage}>
-			<p class={text.med}>Think Music Academy</p>
+			<p class={text.med}>Climenhaga Music Academy</p>
 		</div>
 	</header>
 	<main>
@@ -22,8 +22,8 @@ import Pricing from '../components/pricing/pricing.astro';
 			<!-- <img  src="images/closeup.jpg" /> -->
 			<div class={layout.maxPage}>
 				<div class={styles.heromsg}>
-					<h1 class={text.heroTitle}>Think Music Academy</h1>
-					<h3 class={text.heroSubTitle}>Unleash Your Inner Musician with Expert Piano Lessons</h3>
+					<h1 class={text.heroTitle}>Climenhaga Music Academy</h1>
+					<h3 class={text.heroSubTitle}>Unleash Your Inner Musician with Expert Music Lessons</h3>
 				</div>
 			</div>
 		</div>
@@ -72,15 +72,15 @@ import Pricing from '../components/pricing/pricing.astro';
 		
 		</div> -->
 
-		<div class={styles.map}>
+		<!-- <div class={styles.map}>
 			<div class={layout.maxPage}>
 				<Map />
 			</div>
-		</div>
+		</div> -->
 
 	</main>
 
 	<footer class={styles.footer}>
-		Copyright @2024 Think Music Academy
+		Copyright @2024 Climenhaga Music Academy
 	</footer>
 </Layout>
