--- a/src/components/pricing/pricing.astro
+++ b/src/components/pricing/pricing.astro
@@ -10,6 +10,7 @@ import styles from './style.module.scss'
         <h2>Per Lesson</h2>
         <p><span>$60</span> / Lesson</p>
         <ul>
+          <li>30 mins (1hr lessons available)</li>
           <li>Pay Per Lesson</li>
           <li>Cancel Anytime</li>
         </ul>
@@ -18,6 +19,7 @@ import styles from './style.module.scss'
         <h2>12 Week Package</h2>
         <p><span>$50</span> / Lesson</p>
         <ul>  
+          <li>30 mins (1hr lessons available)</li>
           <li>12 Lesson Bundle</li>
           <li>2 Free Makeup Lessons</li>
           <li>$600 Total</li>
@@ -28,6 +30,7 @@ import styles from './style.module.scss'
         <h2>Full Year</h2>
         <p><span>$45</span> / Lesson</p>
         <ul>
+          <li>30 mins (1hr lessons available)</li>
           <li>36 Lesson Bundle (Year)</li>
           <li>4 Free Makeup Lessons</li>
           <li>$1620 Total</li>
@@ -36,5 +39,4 @@ import styles from './style.module.scss'
     </div>
     
   </div>
-  <p>*30 min lessons available</p>
 </div>
