--- a/src/styles/core/button.module.scss
+++ b/src/styles/core/button.module.scss
@@ -20,24 +20,28 @@
     cursor: pointer;
 }
 
-.resume{
-    @include Flex('vertical');
-    background-color: #99999944;
-    @include medFont(-0.5);
-    height: 30px;
-    width: 30%;
-    color: $dark;
-    padding: 0 4px;
+.cta{
+    // @include Flex('vertical');
+    background-color: #F20F38;
+    @include medFont(0);
+    height: 45px;
+    width: 40%;
+    color: $offWhite;
+    // padding: 4px;
     border-radius: 5px; 
+    border: none;
     outline: none;
     text-decoration: none;
     text-align: center;
+    margin: 12px 6px;
+    padding: 10px 20px;
 }
 
-.resume:hover{
+.cta:hover{
     background-color: $dark;
     color: $offWhite;
     cursor: pointer;
+    border: 1pt solid $offWhite ;
 }
 
 .close{
