added call to action

--- a/src/components/pricing/pricing.astro
+++ b/src/components/pricing/pricing.astro
@@ -1,8 +1,7 @@
 ---
 import styles from './style.module.scss'
 ---
-<divr>
-    
+<div>
   <div class={styles.container}>
 
     <div class={styles.pricing}>
@@ -10,7 +9,7 @@ import styles from './style.module.scss'
         <h2>Per Lesson</h2>
         <p><span>$60</span> / Lesson</p>
         <ul>
-          <li>30 mins (1hr lessons available)</li>
+          <li>1hr (30min lessons available)</li>
           <li>Pay Per Lesson</li>
           <li>Cancel Anytime</li>
         </ul>
@@ -19,7 +18,7 @@ import styles from './style.module.scss'
         <h2>12 Week Package</h2>
         <p><span>$50</span> / Lesson</p>
         <ul>  
-          <li>30 mins (1hr lessons available)</li>
+          <li>1hr (30min lessons available)</li>
           <li>12 Lesson Bundle</li>
           <li>2 Free Makeup Lessons</li>
           <li>$600 Total</li>
@@ -30,13 +29,12 @@ import styles from './style.module.scss'
         <h2>Full Year</h2>
         <p><span>$45</span> / Lesson</p>
         <ul>
-          <li>30 mins (1hr lessons available)</li>
+          <li>1hr (30min lessons available)</li>
           <li>36 Lesson Bundle (Year)</li>
           <li>4 Free Makeup Lessons</li>
           <li>$1620 Total</li>
         </ul>
       </div>
     </div>
-    
   </div>
 </div>
