--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,9 +64,9 @@ import button from '../styles/core/button.module.scss'
 		<!-- <div class={styles.ctaBanner}> -->
 			<div class={styles.ctaBanner}>
 				<div class={layout.maxPage}>
-					<div style="height: 10em">
+					<div class={styles.ctaWrap}>
 						<p class={text.TitleLight}>Book Your First Lesson Now: </p>
-						<a class={button.cta} href="https://app.squareup.com/appointments/book/x5eb5yrqejnh1r/LB9R04M6CT4RD/start" rel="nofollow">Book Now</a>
+						<a class={button.cta} href="https://app.squareup.com/appointments/book/x5eb5yrqejnh1r/LB9R04M6CT4RD/start" rel="nofollow">BOOK NOW</a>
 					</div>
 				</div>
 			</div>
